@@ -1,3 +1,9 @@
+Fri Aug  9 00:10:32 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* enumerator.c (lazy_zip_func): fix non-single argument.  fix
+	  out-of-bound access and pack multiple yielded values.
+	  [ruby-core:56383] [Bug #8735]
+
 Thu Aug  8 23:01:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* object.c (rb_mod_singleton_p): new method Module#singleton_class? to
